# SETR

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config_1bpos.yaml  config_2bpos.yaml
scripts/: run_dtnv_1bpos.py  run_dtnv_2bpos.py
src/setr/: __init__.py
src/setr/cil_extensions/: __init__.py
src/setr/cil_extensions/algorithms/: __init__.py  algorithms.py
src/setr/cil_extensions/callbacks/: __init__.py  callbacks.py
src/setr/cil_extensions/framework/: __init__.py  framework.py
src/setr/cil_extensions/functions/: __init__.py  functions.py
src/setr/cil_extensions/operators/: __init__.py  operators.py
src/setr/cil_extensions/preconditioners/: __init__.py  preconditioners.py
src/setr/cil_extensions/utilities/: __init__.py  utilities.py
src/setr/core/: __init__.py
src/setr/core/gradients/: __init__.py  gradients.py
src/setr/kernel/: __init__.py
src/setr/kernel/python/: __init__.py
src/setr/kernel/stir/: __init__.py
src/setr/priors/: __init__.py  mutual_information.py
src/setr/priors/vtv/: vector_norm.py  vtv.py
src/setr/utils/: __init__.py  cil.py  io.py  sirf.py
